--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<input type="button" value="隐藏横线打印" onclick="show_line(this);" />
 						<br /><br />
 						<div>注：可以先点击"显示答案"再后再选择"隐藏横线打印"打印答案</div>
-        <p class="c_lsxg c_lysxg"><a href="xiaoxueschuti3" target="_blank">3个数随机运算题</a></p>
+        <p class="c_lsxg c_lysxg"><a href="https://xzwzl6.github.io/xiaoxueschuti3" target="_blank">3个数随机运算题</a></p>
         <p class="c_lsxg c_lysxg"><a href="https://xzwzl6.github.io/xiaoxueszuoti" target="_blank">另外一款出题</a></p>
         <p class="c_lsxg c_lysxg"><a href="https://xgwlcm.github.io/xwz" target="_blank">👉轩哥更多资源</a></p>
 						<div id="show_msg"></div>
